Reorg/rename servlets. Configure static/resource files.

--- a/war/index.html
+++ b/war/index.html
@@ -20,7 +20,10 @@
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href="gaetestbed">GAETestBed</a></td>
+        <td><a href="helloworld">HelloWorld</a></td>
+      </tr>
+      <tr>
+        <td><a href="lowleveldatastore">LowLevelDatastore</a></td>
       </tr>
     </table>
   </body>
