--- a/war/index.html
+++ b/war/index.html
@@ -6,25 +6,22 @@
 <!-- with a "Standards Mode" doctype is supported, -->
 <!-- but may lead to some differences in layout.   -->
 
-<html>
+<html lang="us">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Hello App Engine</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <script src="js/jquery-1.9.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </head>
-
-  <body>
-    <h1>Hello App Engine!</h1>
-	
-    <table>
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href="helloworld">HelloWorld</a></td>
-      </tr>
-      <tr>
-        <td><a href="lowleveldatastore">LowLevelDatastore</a></td>
-      </tr>
-    </table>
+  <body class="container">
+    <h1 class="well">Google App Engine Test Bed!</h1>
+    <ul class="nav nav-list">
+      <li class="nav-header">Available Servlets:</li>
+      <li><a href="helloworld">Hello World</a></li>
+      <li><a href="lowleveldatastore">Low Level Datastore</a></li>
+      <li><a href="channel">Channel</a></li>
+    </ul>
   </body>
 </html>
