Minor cosmetic change to index.html.

--- a/war/index.html
+++ b/war/index.html
@@ -12,7 +12,9 @@
     <h1 class="well">Google App Engine Test Bed!</h1>
     <ul class="nav nav-list">
       <li class="nav-header">Available Servlets:</li>
-      <li><a href="helloworld">Hello World</a></li>
+      <li><a href="helloworld">Hello World
+	  <span class="label label-success">No login required</span>
+      </a></li>
       <li><a href="lowleveldatastore">Low Level Datastore</a></li>
       <li><a href="channel">Channel</a></li>
     </ul>
